--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,9 @@ language: ruby
 rvm:
   - 2.4.0
 before_install: gem install bundler -v 1.14.6
+addons:
+  apt:
+    sources:
+      - travis-ci/sqlite3
+    packages:
+      - sqlite3
